uncommet code and fix spacing in gifs

--- a/src/app/quiz/mock/register/registerQuiz.scss
+++ b/src/app/quiz/mock/register/registerQuiz.scss
@@ -1,6 +1,6 @@
 .practice-quiz-container {
     background: url('/images/bg.png') no-repeat center top / cover;
-    margin-bottom: 3rem;
+    padding-bottom: 3rem;
 
     > div {
         text-align: center;
