--- a/src/app/quiz/mock/rules/rules.scss
+++ b/src/app/quiz/mock/rules/rules.scss
@@ -97,6 +97,7 @@
 
                 .answer-gifs {
                     margin-left: 0 !important;
+                    gap: 1.5rem;
                 }
             }
         }
